WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159429
InlineAccess::sizeForLengthAccess() is wrong on some platforms because it should also consider "length" not being array length
https://bugs.webkit.org/show_bug.cgi?id=159429
Summary
InlineAccess::sizeForLengthAccess() is wrong on some platforms because it sho...
Saam Barati
Reported
2016-07-05 11:37:04 PDT
...
Attachments
Patch
(2.59 KB, patch)
2016-07-05 12:40 PDT
,
Saam Barati
fpizlo
: review+
Details
Formatted Diff
Diff
patch for landing
(2.56 KB, patch)
2016-07-05 13:00 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
patch for landing
(2.80 KB, patch)
2016-07-05 15:25 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2016-07-05 12:40:41 PDT
Created
attachment 282806
[details]
Patch
Saam Barati
Comment 2
2016-07-05 13:00:37 PDT
Created
attachment 282810
[details]
patch for landing
Saam Barati
Comment 3
2016-07-05 15:19:31 PDT
I guess GCC can't compute std::max() of two constexpr things inside another constexpr. I'll move these functions to be normal inlined functions.
Saam Barati
Comment 4
2016-07-05 15:25:26 PDT
Created
attachment 282815
[details]
patch for landing
Csaba Osztrogonác
Comment 5
2016-07-06 01:53:59 PDT
Comment on
attachment 282815
[details]
patch for landing View in context:
https://bugs.webkit.org/attachment.cgi?id=282815&action=review
> Source/JavaScriptCore/bytecode/InlineAccess.h:64 > + // This is the maximum between inline and out of line propery replace cases.
typo: proper_t_y
Saam Barati
Comment 6
2016-07-06 11:24:33 PDT
landed with typo fix in:
https://trac.webkit.org/changeset/202866
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug