InlineAccess::sizeForLengthAccess() is wrong on some platforms because it should also consider "length" not being array length https://bugs.webkit.org/show_bug.cgi?id=159429

Reviewed by Filip Pizlo.

The calculation inside sizeForLengthAccess() was not taking into
account that an access to a "length" property might not be an
array length access. sizeForLengthAccess() should always have enough
room for a regular self property accesses. This only changes how
much of a nop sled we emit if array length access size is smaller
than self access size. This matters on ARM64.

* bytecode/InlineAccess.h:
(JSC::InlineAccess::sizeForPropertyAccess):
(JSC::InlineAccess::sizeForPropertyReplace):
(JSC::InlineAccess::sizeForLengthAccess):



Canonical link: https://commits.webkit.org/177596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202866 268f45cc-cd09-0410-ab3c-d52691b4dbfc